--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="cabecerafijo">
         <div class="cajaprincipal" >
           <div class="logo">
-            <img src="image/image/logotipo.png" alt="Logo">
+            <img src="image/logotipo.png" alt="Logo">
           </div>
           <nav class="menubotones">
             <ul>
